crates/strider/tests/snapshots/x86_kernel__control__clamp.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v7" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v7" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v8" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "6" -> "v8" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ ECX", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ ECX", shape=house, fillcolor="#163030"];
  "5" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[2] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
