crates/strider/tests/snapshots/x86_kernel__control__select_three.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[2] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "15" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "18" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "18" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "12" -> "19" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "13" -> "19" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "14" -> "19" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "20" [label="φ EAX", shape=house, fillcolor="#163030"];
  "18" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="arg[3] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
